upgrade to jdk21, kotlin 1.9.21, gradle  8.5